feat: Initialize project with essential configurations and tests
- Added package-lock.json for dependency management.
- Created application-dev.properties for database, JPA, JWT, and mail configurations.
- Implemented unit tests for CompanyDatabaseImpl, DiningTableDatabaseImpl, RefreshTokenDatabaseImpl, StaffDatabaseImpl, and TableConfigurationDatabaseImpl to ensure proper CRUD operations and query functionalities.
- Developed UserRoleTest to validate role-based access control.
- Established CompanyRepositoryTest to verify repository methods for fetching companies based on rating and categories.