@@ -3,6 +3,7 @@ package com.reserveit.logic.impl;
 import com.reserveit.database.interfaces.DiningTableDatabase;
 import com.reserveit.database.interfaces.CompanyDatabase;
 import com.reserveit.dto.TablePositionDto;
+import com.reserveit.enums.ReservationStatus;
 import com.reserveit.enums.TableShape;
 import com.reserveit.enums.TableStatus;
 import com.reserveit.model.Company;
@@ -11,10 +12,8 @@ import com.reserveit.logic.interfaces.DiningTableService;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.UUID;
+import java.time.LocalDateTime;
+import java.util.*;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
@@ -23,19 +22,20 @@ import java.util.stream.Collectors;
 public class DiningTableServiceImpl implements DiningTableService {
     private final DiningTableDatabase tableDb;
     private final CompanyDatabase companyDb;
+    private static final String POSITION_OCCUPIED = "Position is already occupied by another table";
+
 
     public DiningTableServiceImpl(DiningTableDatabase tableDb, CompanyDatabase companyDb) {
         this.tableDb = tableDb;
         this.companyDb = companyDb;
     }
 
-    // Read operations
     @Override
     public List<TablePositionDto> getTablesByCompany(UUID companyId) {
         return tableDb.findByCompanyId(companyId)
                 .stream()
                 .map(TablePositionDto::fromDiningTable)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -43,7 +43,28 @@ public class DiningTableServiceImpl implements DiningTableService {
         return tableDb.findAvailableTables(companyId, numberOfPeople)
                 .stream()
                 .map(TablePositionDto::fromDiningTable)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    @Override
+    public void updateTableStatus(Long tableId) {
+        DiningTable table = getTableById(tableId);
+
+        boolean hasActiveReservations = table.getReservations().stream()
+                .anyMatch(reservation ->
+                        reservation.getStatus() != ReservationStatus.CANCELLED &&
+                                reservation.getReservationDate().isBefore(LocalDateTime.now()) &&
+                                reservation.getEndTime().isAfter(LocalDateTime.now()));
+
+        table.setStatus(hasActiveReservations ? TableStatus.RESERVED : TableStatus.AVAILABLE);
+        tableDb.save(table);
+    }
+
+    @Override
+    public void updateTableStatus(Long tableId, TableStatus status) {
+        DiningTable table = getTableById(tableId);
+        table.setStatus(status);
+        tableDb.save(table);
     }
 
     @Override
@@ -51,35 +72,23 @@ public class DiningTableServiceImpl implements DiningTableService {
         return TablePositionDto.fromDiningTable(getTableById(tableId));
     }
 
-    // Create operation
     @Override
-    @Transactional
     public TablePositionDto addTable(TablePositionDto tableDto) {
-        // Get and verify company
         Company company = getCompanyById(tableDto.getCompanyId());
 
-        // Generate table number if not provided
         if (tableDto.getTableNumber() == null || tableDto.getTableNumber().isEmpty()) {
             List<DiningTable> existingTables = tableDb.findByCompanyId(company.getId());
             int nextNumber = existingTables.stream()
-                    .map(table -> {
-                        String num = table.getTableNumber().replaceAll("\\D", "");
-                        return Integer.parseInt(num);
-                    })
-                    .max(Integer::compareTo)
+                    .map(table -> table.getTableNumber().replaceAll("\\D", ""))
+                    .mapToInt(Integer::parseInt)
+                    .max()
                     .orElse(0) + 1;
             tableDto.setTableNumber("T" + nextNumber);
         }
 
-        if (tableDto.getShape() == null) {
-            tableDto.setShape(TableShape.CIRCLE);
-        }
-        if (tableDto.getStatus() == null) {
-            tableDto.setStatus(TableStatus.AVAILABLE);
-        }
-        if (tableDto.getCapacity() <= 0) {
-            tableDto.setCapacity(4);
-        }
+        tableDto.setShape(Optional.ofNullable(tableDto.getShape()).orElse(TableShape.CIRCLE));
+        tableDto.setStatus(Optional.ofNullable(tableDto.getStatus()).orElse(TableStatus.AVAILABLE));
+        if (tableDto.getCapacity() <= 0) tableDto.setCapacity(4);
 
         validateNewTablePosition(tableDto.getCompanyId(), tableDto.getXPosition(), tableDto.getYPosition());
 
@@ -89,50 +98,38 @@ public class DiningTableServiceImpl implements DiningTableService {
         return TablePositionDto.fromDiningTable(savedTable);
     }
 
-    // Update operations
     @Override
-    @Transactional
     public void updateTablePosition(Long tableId, TablePositionDto positionDto) {
         validatePositionData(positionDto);
         DiningTable table = getTableById(tableId);
 
-        // Validate company ownership
         if (!table.getCompany().getId().equals(positionDto.getCompanyId())) {
             throw new IllegalArgumentException("Table does not belong to the specified company");
         }
 
-        // Check position availability
         if (tableDb.isPositionOccupiedExcludingTable(
                 positionDto.getCompanyId(),
                 positionDto.getXPosition(),
                 positionDto.getYPosition(),
                 tableId)) {
-            throw new IllegalStateException("Position is already occupied by another table");
+            throw new IllegalStateException(POSITION_OCCUPIED);
         }
 
-        // Update position
         table.setXPosition(positionDto.getXPosition());
         table.setYPosition(positionDto.getYPosition());
         tableDb.save(table);
     }
 
     @Override
-    @Transactional
     public void updateTablePositions(UUID companyId, List<TablePositionDto> positions) {
-        // Validate incoming positions
         positions.forEach(TablePositionDto::validate);
-
-        // Fetch tables from the database
-        List<Long> positionIds = positions.stream()
-                .map(TablePositionDto::getId)
-                .collect(Collectors.toList());
+        List<Long> positionIds = positions.stream().map(TablePositionDto::getId).toList();
         List<DiningTable> tables = tableDb.findByIdsAndCompanyId(positionIds, companyId);
 
         if (tables.size() != positions.size()) {
             throw new IllegalArgumentException("Some tables do not belong to the specified company");
         }
 
-        // Update table positions
         Map<Long, TablePositionDto> positionMap = positions.stream()
                 .collect(Collectors.toMap(TablePositionDto::getId, Function.identity()));
 
@@ -142,85 +139,56 @@ public class DiningTableServiceImpl implements DiningTableService {
                 table.setXPosition(positionDto.getXPosition());
                 table.setYPosition(positionDto.getYPosition());
                 table.setRotation(positionDto.getRotation());
-                System.out.println("Updating Table ID: " + table.getId() +
-                        " to Position (" + positionDto.getXPosition() + ", " + positionDto.getYPosition() + ")");
             }
         });
 
-        // Save updated tables
         tableDb.saveAll(tables);
     }
+
     @Override
-    @Transactional
     public TablePositionDto updateTable(Long tableId, TablePositionDto updates) {
         DiningTable table = getTableById(tableId);
 
-        // Validate company ownership
         if (!table.getCompany().getId().equals(updates.getCompanyId())) {
             throw new IllegalArgumentException("Table does not belong to the specified company");
         }
 
-        // Update all provided fields
-        if (updates.getTableNumber() != null) {
-            table.setTableNumber(updates.getTableNumber());
-        }
-        if (updates.getCapacity() > 0) {
-            table.setCapacity(updates.getCapacity());
-        }
-        if (updates.getShape() != null) {
-            table.setShape(updates.getShape());
-        }
-        if (updates.getStatus() != null) {
-            table.setStatus(updates.getStatus());
-        }
+        Optional.ofNullable(updates.getTableNumber()).ifPresent(table::setTableNumber);
+        if (updates.getCapacity() > 0) table.setCapacity(updates.getCapacity());
+        Optional.ofNullable(updates.getShape()).ifPresent(table::setShape);
+        Optional.ofNullable(updates.getStatus()).ifPresent(table::setStatus);
         if (updates.getXPosition() >= 0 && updates.getYPosition() >= 0) {
-            // Check if the new position is available (if position is being updated)
-            if (table.getXPosition() != updates.getXPosition() ||
-                    table.getYPosition() != updates.getYPosition()) {
-
-                if (tableDb.isPositionOccupiedExcludingTable(
-                        updates.getCompanyId(),
-                        updates.getXPosition(),
-                        updates.getYPosition(),
-                        tableId)) {
-                    throw new IllegalStateException("Position is already occupied by another table");
-                }
-
-                table.setXPosition(updates.getXPosition());
-                table.setYPosition(updates.getYPosition());
+            if (tableDb.isPositionOccupiedExcludingTable(
+                    updates.getCompanyId(),
+                    updates.getXPosition(),
+                    updates.getYPosition(),
+                    tableId)) {
+                throw new IllegalStateException(POSITION_OCCUPIED);
             }
+
+            table.setXPosition(updates.getXPosition());
+            table.setYPosition(updates.getYPosition());
         }
 
         table.setOutdoor(updates.isOutdoor());
-        if (updates.getFloorLevel() > 0) {
-            table.setFloorLevel(updates.getFloorLevel());
-        }
-        if (updates.getRotation() >= 0) {
-            table.setRotation(updates.getRotation());
-        }
+        if (updates.getFloorLevel() > 0) table.setFloorLevel(updates.getFloorLevel());
+        if (updates.getRotation() >= 0) table.setRotation(updates.getRotation());
 
-        // Save and return updated table
         DiningTable savedTable = tableDb.save(table);
         return TablePositionDto.fromDiningTable(savedTable);
     }
 
     @Override
-    @Transactional
-    public void updateTableStatus(Long tableId, TableStatus status) {
-        DiningTable table = getTableById(tableId);
-        table.setStatus(status);
-        tableDb.save(table);
-    }
-
-    // Delete operation
-    @Override
-    @Transactional
     public void deleteTable(Long tableId) {
-        getTableById(tableId); // Verify existence
+        getTableById(tableId);
         tableDb.deleteById(tableId);
     }
 
-    // Helper methods
+    @Override
+    public DiningTable findById(Long id) {
+        return getTableById(id);
+    }
+
     private void validatePositionData(TablePositionDto position) {
         if (position.getXPosition() < 0 || position.getYPosition() < 0) {
             throw new IllegalArgumentException(
@@ -231,7 +199,7 @@ public class DiningTableServiceImpl implements DiningTableService {
 
     private void validateNewTablePosition(UUID companyId, int xPosition, int yPosition) {
         if (tableDb.isPositionOccupied(companyId, xPosition, yPosition)) {
-            throw new IllegalStateException("Position is already occupied by another table");
+            throw new IllegalStateException(POSITION_OCCUPIED);
         }
     }
 
